@@ -1,3 +1,5 @@
+- ISSUE #21: Problems on clearDisplay and setupDisplay;
+
 Version 2.1.0
 
 - ISSUE #20: Support for negative decimal numbers;
